Move the registration of the user workout entries to UserController and fix the bug of valid options when adding another exercise